----------------------------------------------------------------------
Wed Aug  3 17:05:31 2011                        Michael Jennings (mej)

Further cleanups and a few functional corrections vetted with gmk.
----------------------------------------------------------------------
Fri Aug  5 16:15:11 2011                        Michael Jennings (mej)

Add ObjectSet::del() method to remove objects from sets.
----------------------------------------------------------------------
Fri Aug  5 18:43:51 2011                        Michael Jennings (mej)

Initial testing framework.  Doesn't test much yet, but it's a start.
Eventually I'd like to achieve complete coverage, at least on the
modules, but that will take some time.  Use "make test" to run the
tests.
----------------------------------------------------------------------
Wed Aug 10 17:49:32 2011                        Michael Jennings (mej)

WORK IN PROGRESS:  Config.pm rewrite and unit tests.

This WILL BREAK existing config files, so don't try to use it yet!
----------------------------------------------------------------------
Thu Aug 11 16:30:59 2011                        Michael Jennings (mej)

Initial refactoring of the Config module is functional.  This version
of the parser splits on whitespace with commas considered equivalent
to whitespace.  All tests pass.
----------------------------------------------------------------------
Thu Aug 11 16:37:58 2011                        Michael Jennings (mej)

Per discussion with Greg, this version of the parser requires a comma
between items in a list.  Whitespace surrounding the comma is ignored,
but embedded whitespace within a value is significant.  This maintains
consistency between quoting requirements for keys and values but will
require some existing configuration files to be modified.

The test config file has been modified so that all unit tests pass
again.
----------------------------------------------------------------------