@@ -6,6 +6,8 @@
 # through Lawrence Berkeley National Laboratory (subject to receipt of any
 # required approvals from the U.S. Dept. of Energy).  All rights reserved.
 #
+# $Id$
+#
 
 use Warewulf::Include;
 use Getopt::Long;
@@ -13,9 +15,7 @@ use Getopt::Long;
 Getopt::Long::Configure ("bundling");
 
 my @VARS;
-my $opt_help;
-my $opt_shell;
-my $opt_all;
+my ($opt_help, $opt_sh, $opt_csh, $opt_all);
 
 GetOptions(
     'h|help'        => \$opt_help,
