@@ -1,8 +1,4 @@
 SUBDIRS = Warewulf
 
-perlmodsdir = ${PERL_VENDORLIB}
-
-dist_perlmods_SCRIPTS = Warewulf.pm
-
 MAINTAINERCLEANFILES = Makefile.in
 
