@@ -1,79 +1,0 @@
-# Copyright (c) 2001-2003 Gregory M. Kurtzer
-#
-# Copyright (c) 2003-2011, The Regents of the University of California,
-# through Lawrence Berkeley National Laboratory (subject to receipt of any
-# required approvals from the U.S. Dept. of Energy).  All rights reserved.
-#
-#
-# $Id$
-#
-
-package Warewulf;
-
-use Warewulf::Include;
-use Warewulf::Config;
-
-use Exporter;
-
-our @ISA = ('Exporter');
-
-our @EXPORT = ();
-
-=head1 NAME
-
-Warewulf - Object interface to Warewulf
-
-=head1 ABOUT
-
-
-=head1 SYNOPSIS
-
-    use Warewulf;
-
-    my $obj = Warewulf->new();
-
-
-=head1 METHODS
-
-=over 12
-=cut
-
-
-=item new([path to config])
-
-The new constructor will create the object that references configuration the
-stores.
-
-=cut
-sub
-new($$)
-{
-    my $proto               = shift;
-    my $class               = ref($proto) || $proto;
-    my $self                = ();
-
-    %{$self} = ();
-
-    bless($self, $class);
-
-    return($self);
-}
-
-=back
-
-=head1 SEE ALSO
-
-Warewulf::Info Warewulf::Config
-
-=head1 COPYRIGHT
-
-Copyright (c) 2001-2003 Gregory M. Kurtzer
-
-Copyright (c) 2003-2011, The Regents of the University of California,
-through Lawrence Berkeley National Laboratory (subject to receipt of any
-required approvals from the U.S. Dept. of Energy).  All rights reserved.
-
-=cut
-
-
-1;
