@@ -2,7 +2,7 @@ SUBDIRS =  HTML DataStore Module DSO Event System
 
 perlmodsdir = ${PERL_VENDORLIB}/Warewulf
 
-dist_perlmods_SCRIPTS = Config.pm Daemon.pm DataStore.pm Debug.pm Include.pm Logger.pm Object.pm DSOFactory.pm ObjectSet.pm Util.pm Module.pm ModuleLoader.pm Term.pm Event.pm EventHandler.pm Network.pm DSO.pm System.pm SystemFactory.pm ParallelCmd.pm
+dist_perlmods_SCRIPTS = Config.pm Daemon.pm DataStore.pm Include.pm Logger.pm Object.pm DSOFactory.pm ObjectSet.pm Util.pm Module.pm ModuleLoader.pm Term.pm Event.pm EventHandler.pm Network.pm DSO.pm System.pm SystemFactory.pm ParallelCmd.pm
 
 MAINTAINERCLEANFILES = Makefile.in
 
