@@ -206,3 +206,13 @@ require some existing configuration files to be modified.
 The test config file has been modified so that all unit tests pass
 again.
 ----------------------------------------------------------------------
+Fri Aug 12 13:23:01 2011                        Michael Jennings (mej)
+
+Remove bogus Warewulf.pm.
+
+Remove Debug.pm and add its contents to Util.pm instead.  Fix
+script/module dependencies accordingly.
+
+Update examine_object() from upstream (Mezzanine) to improve handling
+of objects.
+----------------------------------------------------------------------
